# environ-config

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  NOTICE  README.md  README.rst  noxfile.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini  typing_examples.py  zizmor.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  codeql-analysis.yml  main.yml  pypi-package.yml  zizmor.yml
docs/: Makefile  api.md  api.rst  backward-compatibility.rst  conf.py  index.md  index.rst  license.rst  make.bat  testing.md  tutorial.md  tutorial.rst
src/environ/: __init__.py  _environ_config.py  exceptions.py  secrets.py
src/environ/secrets/: __init__.py  _dir.py  _ini.py  _utils.py  _vault.py  awssm.py
tests/: test_class_generate_help.py  test_class_generate_json.py  test_class_to_config.py  test_environ_config.py  test_packaging.py  test_secrets.py  test_secrets_awssm.py
tests/typing/: api.py
typing-tests/: README.md  api.py
typing_tests/: README.md  __init__.py
